add MQTT package to frontend and change icon

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,14 @@
-#__next {
+html,
+body {
+  min-height: 100vh;
+  min-width: 100vw;
+}
+/* 
+#__next, html, body {
   display: flex;
   min-height: 100vh;
+  min-width: 100vw;
   flex-direction: column;
   padding: 0%;
   margin: 0%;
-}
+} */
