Fix mobile version and map placement

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,14 +1,28 @@
-html,
-body {
-  min-height: 100vh;
-  min-width: 100vw;
-}
-/* 
-#__next, html, body {
+/* #__next {
   display: flex;
   min-height: 100vh;
   min-width: 100vw;
-  flex-direction: column;
+  display: flex;
   padding: 0%;
   margin: 0%;
 } */
+
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+html {
+  height: -webkit-fill-available;
+}
+#__next {
+  display: flex;
+  min-height: 100vh;
+  min-width: 100vw;
+}
+
+.DentistimoMap {
+  position: relative;
+  min-width: 100vw;
+  min-height: 84vh;
+  height: 100%;
+}
