Add basic implementation of Appointment Booking
Co-authored-by:  Christofer Jidarv <jidarv@student.chalmers.se>
Co-authored-by:  Klara Svensson <klarasve@student.chalmers.se>
Set up a modal for booking appointments underlying logic still needs to
be added. However the basic visual idea is in place

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,13 +1,4 @@
-@import 'react-big-calendar/lib/sass/styles';
-
-/* #__next {
-  display: flex;
-  min-height: 100vh;
-  min-width: 100vw;
-  display: flex;
-  padding: 0%;
-  margin: 0%;
-} */
+// @import "calender.scss";
 
 body {
   min-height: 100vh;
